--- a/requirements.txt
+++ b/requirements.txt
@@ -2,26 +2,42 @@ annotated-types==0.7.0
 anyio==4.10.0
 asgiref==3.9.1
 blis==1.3.0
+catalogue==2.0.10
 certifi==2025.8.3
 charset-normalizer==3.4.3
 click==8.2.1
 cloudpathlib==0.21.1
 colorama==0.4.6
-django==5.2.5
+confection==0.1.5
+cymem==2.0.11
+distro==1.9.0
+Django==5.2.5
+django-cors-headers==4.7.0
+django-environ==0.12.0
 djangorestframework==3.16.1
-djangorestframework-simplejwt==5.5.1
+djangorestframework_simplejwt==5.5.1
+en_core_web_sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl
 exceptiongroup==1.3.0
 filelock==3.19.1
 fsspec==2025.7.0
-gunicorn==23.0.0
 h11==0.16.0
 httpcore==1.0.9
 httpx==0.28.1
-jinja2==3.1.6
+huggingface-hub==0.34.4
+idna==3.10
+Jinja2==3.1.6
+jiter==0.10.0
 joblib==1.5.1
+langcodes==3.5.0
+language_data==1.3.0
 marisa-trie==1.3.0
 markdown-it-py==4.0.0
+MarkupSafe==3.0.2
+mdurl==0.1.2
+mpmath==1.3.0
 murmurhash==1.0.13
+networkx==3.4.2
+numpy==2.2.6
 openai==1.101.0
 packaging==25.0
 preshed==3.0.10
@@ -29,6 +45,8 @@ psycopg2-binary==2.9.10
 pydantic==2.11.7
 pydantic_core==2.33.2
 Pygments==2.19.2
+PyJWT==2.10.1
+PyYAML==6.0.2
 regex==2025.7.34
 requests==2.32.5
 rich==14.1.0
