--- a/requirements.txt
+++ b/requirements.txt
@@ -20,6 +20,7 @@ en_core_web_sm @ https://github.com/explosion/spacy-models/releases/download/en_
 exceptiongroup==1.3.0
 filelock==3.19.1
 fsspec==2025.7.0
+gunicorn==23.0.0
 h11==0.16.0
 httpcore==1.0.9
 httpx==0.28.1
