--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,7 @@ colorama==0.4.6
 confection==0.1.5
 cymem==2.0.11
 distro==1.9.0
+dj-database-url==3.0.1
 Django==5.2.5
 django-cors-headers==4.7.0
 django-environ==0.12.0
